--- a/06.md
+++ b/06.md
@@ -215,3 +215,18 @@ public String articlesId(@PathVariable String articlesId, Model model) {
 }
 ```
 <img src="https://github.com/butomop/studyLog/blob/master/images/6/1.png"><br><br>
+
+### 제약조건
+
+- HTML 중복제거<br>
+thymeleaf fragments 이용처리<br>
+[fragments](https://www.thymeleaf.org/doc/tutorials/3.0/usingthymeleaf.html#fragments)<br>
+[layout](https://www.thymeleaf.org/doc/articles/layouts.html)<br>
+
+- 정적 파일 수정 시 재시작 하지 않고 변경사항 반영하기<br>
+application.properties -> spring.thymeleaf.cache=false 추가<br>
+(build해야 적용되는데, setting 에서 auto build 설정.. 편하다!)<br>
+
+- class 파일 수정 시 자동으로 재시작 하기<br>
+application.properties
+-> spring.devtools.livereload.enabled=true, spring.devtools.restart.enabled=true 추가
